# recitation-materials

./: .gitignore
intro-cpp-1-2-3/: CMakeLists.txt  ObnoxiousObject.h  User.cpp  User.h  build.sh  example1.cpp  example2.cpp  example3-prompt.cpp  example3.cpp  example4-prompt.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8-prompt.cpp  example8.cpp
phase-2/: main.cpp
rec1-intro-cpp/: CMakeLists.txt  User.cpp  User.h
rec2/phase-2/: CMakeLists.txt  ast  main.cpp
rec2/virtual-and-visitor/: CMakeLists.txt  main.cpp
rec2/visitor-example/: AST.cpp  AST.h  Makefile  PrettyPrinter.cpp  PrettyPrinter.h  README.md  Visitor.h  main.cpp
rec3/: CMakeLists.txt  PrettyPrinter.cpp  PrettyPrinter.h  main.cpp
rec3/ast/: AST.h  Visitor.cpp  Visitor.h
rec3/execute/: FindGlobals.cpp  FindGlobals.h  Interpreter.cpp  Interpreter.h  LValueResolver.cpp  LValueResolver.h
rec3/util/: Visitor.h
rec4/: .gitignore  CMakeLists.txt  MITScript.cpp  MITScript.g  MITScript.h  Makefile  bc-parser-driver.cpp  main.cpp  prettyprinter.h  types.h
rec4/src/: AST.cpp  AST.h  CFG.cpp  CFG.h  CFGBuilder.cpp  CFGBuilder.h  Parser.cpp  Parser.h  Visitor.cpp  Visitor.h  compile.cpp  compile.h
rec4/vm/: MITScript.h  main.cpp  prog.mit
rec4/vm/.antlr/: MITScript.java
rec4/vm/src/: CFG.cpp  CFGBuilder.cpp  CFGBuilder.h  Parser.h  Visitor.h
rec5/: CMakeLists.txt  FindGlobals.cpp  FindGlobals.h  Makefile  PrettyPrinter.cpp  PrettyPrinter.h  build.sh  fib-alloc.cpp  fib-mem-resource.cpp  fib.cpp  main.cpp
rec5/ast/: AST.h  Visitor.cpp  Visitor.h
rec5/execute/: FindGlobals.cpp  FindGlobals.h  Interpreter.cpp  Interpreter.h  LValueResolver.h
rec6/: CMakeLists.txt  main.cpp  sieve-of-eratosthenes.mit
rec6/vm/: CMakeLists.txt  MITScript.interp  MITScript.tokens  fail.out  prettyprinter.h  prog.out
rec6/vm/src/: AST.cpp  Visitor.cpp  compile.h
rec7-p4-gc/: CMakeLists.txt  fib-mem-resource.cpp  fib.cpp
virtual-and-visitor/: main.cpp
visitor-example/: AST.h  Makefile  PrettyPrinter.h  Visitor.h  main.cpp
